fix: h2 styles bleeding into components in demo's

--- a/packages/storybook/static/styles.css
+++ b/packages/storybook/static/styles.css
@@ -25,7 +25,7 @@ body {
   --mdc-icon-font: 'Material Icons Outlined';
 }
 
-h2 {
+h2[demo] {
   font-family: Roboto, Arial, Helvetica, sans-serif;
   font-size: 16px;
   font-weight: 500;
